# Audio-player

./: .gitignore  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  MusicLibrary.cpp  MusicLibrary.h  Playlist.cpp  Playlist.h  README.md  Song.cpp  Song.h  Tag.cpp  Tag.h  Tag.hpp  UserInterface.cpp  UserInterface.h  UserInterface.hpp  VorbisFormat.cpp  VorbisFormat.hpp  main.cpp  run_coverage.sh
include/Audio-player/: Album.hpp  AudioPlayer.hpp  FileManager.hpp  InputHandler.hpp  InterfaceController.hpp  KeyboardInteraction.hpp  MusicItem.hpp  MusicLibrary.hpp  Player.hpp  Playlist.hpp  Song.hpp  Tag.hpp  UserInterface.hpp  VorbisFormat.hpp  WindowManager.hpp
src/: Album.cpp  AudioPlayer.cpp  FileManager.cpp  InputHandler.cpp  InterfaceController.cpp  KeyboardInteraction.cpp  MusicItem.cpp  MusicLibrary.cpp  Player.cpp  Playlist.cpp  Song.cpp  Tag.cpp  UserInterface.cpp  VorbisFormat.cpp  WindowManager.cpp  main.cpp
tests/: AlbumTest.cpp  SongComparisonTest.cpp  SongTest.cpp
tests/entity_tests/: AlbumTest.cpp  AudioPlayerTest.cpp  FileManagerTest.cpp  MusicLibraryTest.cpp  PlaylistTest.cpp  SongTest.cpp
tests/functionality_tests/: SongComparisonTest.cpp
